--- a/index.html
+++ b/index.html
@@ -19,30 +19,87 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p><img src="https://cloud.githubusercontent.com/assets/616585/18190724/c47550ee-7092-11e6-9cb4-15e02b9ca298.png"> </p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h1>
+<a id="elector" class="anchor" href="#elector" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>elector</h1>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><a href="https://gitter.im/elector-browser/Lobby?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://badges.gitter.im/elector-browser/Lobby.svg" alt="Join the chat at https://gitter.im/elector-browser/Lobby"></a></p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>TOR BROWSER IN ELECTRON</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="note" class="anchor" href="#note" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NOTE:</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>THIS IS IN ALPHA, USER BEWARE. </p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="why" class="anchor" href="#why" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WHY?:</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>One liner -- "A super lightweight Tor connected browser that uses the latest in web technologies."</p>
+
+<p>I made this because I wanted a simple browser that auto-connected to my tor service running on my MacBook that I installed via homebrew. If you are running tor in OSX via homebrew, then this app will work out of the box if you follow the install instructions below. Otherwise, you may have to edit your torrc file and (gosh!) actually use the terminal / command line / whatever you call it.</p>
+
+<h3>
+<a id="security-issues" class="anchor" href="#security-issues" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SECURITY ISSUES:</h3>
+
+<p>ELECTRON has known security issues with using an unsandboxed version of chromium. The roadmap is to use the electron-prebuilt module from Brave browser since they re-sandboxed and fixed a lot of the security issues related to potential for XSS attacks.</p>
+
+<h3>
+<a id="fork-me" class="anchor" href="#fork-me" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>FORK ME:</h3>
+
+<p>Please fork and make this better.<br>
+READ the <a href="https://github.com/jamesacampbell/elector/blob/master/CONTRIBUTING.md">CONTRIBUTING</a> doc for tips on how to help with this project. Thank you!</p>
+
+<p>here is how to run it yourself:</p>
+
+<h3>
+<a id="install-instructions" class="anchor" href="#install-instructions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install instructions</h3>
+
+<ol>
+<li><p>you must have tor already installed. follow the instructions from torproject.org</p></li>
+<li><p>then to run this code, follow these steps:</p></li>
+</ol>
+
+<pre><code>git clone https://github.com/jamesacampbell/elector.git
+cd elector
+npm install -d
+npm start
+</code></pre>
+
+<h3>
+<a id="tidbits" class="anchor" href="#tidbits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>tidbits:</h3>
+
+<p>The index.js file is configured to force the connection through the socks5 proxy 127.0.0.1:9050. So for OSX you can install tor via homebrew:</p>
+
+<p><em>in case you don't have tor install on OSX yet</em></p>
+
+<h3>
+<a id="osx--homebrew-easiness-to-get-tor-installed-as-a-service" class="anchor" href="#osx--homebrew-easiness-to-get-tor-installed-as-a-service" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OSX &amp; homebrew easiness to get Tor installed as a service:</h3>
+
+<pre><code>brew install tor
+</code></pre>
+
+<p>then make sure tor is set to run when your OS starts, then check duckduckgo onion (<a href="http://3g2upl4pq6kufc4m.onion">http://3g2upl4pq6kufc4m.onion</a>) site to confirm it is working</p>
+
+<h3>
+<a id="useful-onion-links" class="anchor" href="#useful-onion-links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>useful .onion links</h3>
+
+<p>duck duck go <a href="http://3g2upl4pq6kufc4m.onion">http://3g2upl4pq6kufc4m.onion</a></p>
+
+<p>tor paste <a href="http://mc6nld3smffo3vgm.onion">http://mc6nld3smffo3vgm.onion</a></p>
+
+<p>not evil tor search <a href="http://hss3uro2hsxfogfq.onion">http://hss3uro2hsxfogfq.onion</a></p>
+
+<p>hidden wiki <a href="http://gxamjbnu7uknahng.onion/wiki/index.php/Main_Page">http://gxamjbnu7uknahng.onion/wiki/index.php/Main_Page</a></p>
+
+<p>hidden answers <a href="http://answerstedhctbek.onion">http://answerstedhctbek.onion</a></p>
+
+<p>librechan <a href="http://librechbtnnmzoa7.onion">http://librechbtnnmzoa7.onion</a></p>
+
+<p>searx <a href="http://ulrn6sryqaifefld.onion">http://ulrn6sryqaifefld.onion</a></p>
+
+<p>etherpad hosted by riseup onion <a href="http://5jp7xtmox6jyoqd5.onion">http://5jp7xtmox6jyoqd5.onion</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/jamesacampbell/elector">Elector</a> is maintained by <a href="https://github.com/jamesacampbell">jamesacampbell</a>.</span>
